--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
           <div class="right-discussion-main">
             <div class="dog-images">
-              <img class="dog-img" src="/Images/dog-image-1.jpg" />
-              <img class="dog-img" src="/Images/dog-image-2.jpg" />
-              <img class="dog-img" src="/Images/dog-image-3.jpg" />
+              <img class="dog-img" src="/Images/dog-image-1.jpg" alt="dog-image"/>
+              <img class="dog-img" src="/Images/dog-image-2.jpg" alt="dog-image"/>
+              <img class="dog-img" src="/Images/dog-image-3.jpg" alt="dog-image"/>
             </div>
             <p class="right-discussion">
               Here are a few pictures. She’s a happy girl!
