--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <div class="phone-container">
         <div class="white-space"></div>
         <div class="user-container">  
-          <img class="left-arrow" src="/Images/angle-left-solid.svg" alt="left-icon">
-          <img class="avatar" src="/Images/avatar.jpg" alt="avatar" />
+          <img class="left-arrow" src="Images/angle-left-solid.svg" alt="left-icon">
+          <img class="avatar" src="Images/avatar.jpg" alt="avatar" />
           <div class="user-info">
             <h1 class="username">Samuel Green</h1>
             <p class="available">Available to Walk</p>
           </div>
-          <img class="dots-icon" src="/Images/ellipsis-vertical-solid-2.svg" alt="dots-icon">
+          <img class="dots-icon" src="Images/ellipsis-vertical-solid-2.svg" alt="dots-icon">
         </div>  
 
         <div class="chat-container">
@@ -57,9 +57,9 @@
 
           <div class="right-discussion-main">
             <div class="dog-images">
-              <img class="dog-img" src="/Images/dog-image-1.jpg" alt="dog-image"/>
-              <img class="dog-img" src="/Images/dog-image-2.jpg" alt="dog-image"/>
-              <img class="dog-img" src="/Images/dog-image-3.jpg" alt="dog-image"/>
+              <img class="dog-img" src="Images/dog-image-1.jpg" alt="dog-image"/>
+              <img class="dog-img" src="Images/dog-image-2.jpg" alt="dog-image"/>
+              <img class="dog-img" src="Images/dog-image-3.jpg" alt="dog-image"/>
             </div>
             <p class="right-discussion">
               Here are a few pictures. She’s a happy girl!
