--- a/index.html
+++ b/index.html
@@ -75,14 +75,13 @@
             <div class="prices--main-container">
               <div class="prices-container">
                 <div class="radio-text">
-                <input type="radio" name="radio"/><p class="time">30 minute walk</p>
+                <label class="time"><input type="radio" name="radio"/>30 minute walk</label>
               </div>
                 <h1 class="price">$29</h1>
             </div>
             <div class="prices-container">
               <div class="radio-text">                
-                <input  type="radio" name="radio"/>
-                <p class="time">1 hour walk</p>
+                <label class="time"><input  type="radio" name="radio"/>1 hour walk</label>
               </div>
                  <h1 class="price">$49</h1>
               </div>
