--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
                  <h1 class="price">$49</h1>
             </div>
             <div class="placeholder-box">
-            <input class="placeholder" placeholder="Type a message…"><button class="send-button" type="submit"><img src="/Images/circle-chevron-right-solid.svg"></button></input>
+            <input class="placeholder" placeholder="Type a message…">
+            <button class="send-button" type="submit">
+              <img src="Images/circle-chevron-right-solid.svg"></button></input>
             </div>
           </div>
        
