--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             </div>
             <div class="placeholder-box">
             <input class="placeholder" placeholder="Type a message…">
-            <button class="send-button" type="submit">
-              <img src="Images/circle-chevron-right-solid.svg"></button></input>
+            <button class="send-button" type="submit" title="title">
+              <img src="Images/circle-chevron-right-solid.svg" alt="send-button"></button></input>
             </div>
           </div>
        
