Input radio solved

--- a/index.html
+++ b/index.html
@@ -73,17 +73,19 @@
             
             <div class="prices--main-container">
               <div class="prices-container">
-                <div class="radio-text">                
-                  <input id="30min" type="radio" name="radio1" checked="checked"/>
-                  <label for="30min">30 minute walk</label>
+                <div class="radio-text">
+                  <label>
+                    <input type="radio" checked="checked" value="30min" name="radio1">30 minute walk
+                    <span></span></label>               
                 </div>
                 <h1 class="price">$29</h1>
               </div>
             </div>
             <div class="prices-container">
-              <div class="radio-text">                
-                <input  id="1hour" type="radio" name="radio1"  checked="checked"/>
-                <label for="1hour" class="time">1 hour walk</label>
+              <div class="radio-text">    
+                <label>
+                  <input type="radio" checked="checked" value="30min" name="radio1">1 hour walk
+                  <span></span></label>             
               </div>
                  <h1 class="price">$49</h1>
             </div>
